@@ -18,6 +18,7 @@
 - added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
 
 - updated: `GROUP()` by adding a new argument `url_prefix`
+- updated: `NEWSCHEMA()` supports `NEWSCHEMA('group/name')`
 
 - fixed: mail attachments
 - fixed: mail `message.manually()`
